--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ django-sendgrid-v5 = ">=1.2.0, <1.2.2"
 django-mptt = "latest"
 
 [dev-packages]
+flake8 = ">=3.9.2, <3.10"
 
 [requires]
 python_version = "3.8"
