--- a/Pipfile
+++ b/Pipfile
@@ -4,19 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = ">=3.0.0,<4.0.0"
-djangorestframework = ">=3.12.0,<3.13.0"
-auth0-python = ">=3.0.0,<4.0.0"
-psycopg2-binary = ">=2.0.0, <3.2.0"
-cryptography = ">=35.0.0, <36.0.0"
-django-cors-headers = ">=3.10.0, <3.11.0"
-drf-jwt = ">=1.19.0, <1.20.0"
-pyjwt = ">=2.3.0, <2.4.0"
-requests = ">=2.26.0, <2.27.0"
-drf-yasg = ">=1.20.0, <1.21.0"
 boto3 = ">=1.20.0, <1.20.21"
+cryptography = ">=35.0.0, <36.0.0"
+drf-yasg = ">=1.20.0, <1.21.0"
 django-sendgrid-v5 = ">=1.2.0, <1.2.2"
 django-mptt = "latest"
+django = ">=3.0.0,<4.0.0"
+djangorestframework = ">=3.12.0,<3.13.0"
+django-cors-headers = ">=3.10.0, <3.11.0"
+drf-jwt = ">=1.19.0, <1.20.0"
+psycopg2 = ">=2.9.0, <3.0.0"
+pyjwt = ">=2.3.0, <2.4.0"
+requests = ">=2.26.0, <2.27.0"
 
 [dev-packages]
 flake8 = ">=3.9.2, <3.10"
