--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,15 @@ services:
     volumes:
       - ./src:/home/appowner/src
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "
+        python manage.py wait_for_db &&
+        python manage.py runserver 0.0.0.0:8000
+      "
+    environment:
+      - DB_HOST=db
+      - DB_NAME=appdb
+      - DB_USER=appuser
+      - DB_PASS=secretpassword
 
   db:
     image: postgres:13-alpine
